Fix alignment for remember me checkbox text

--- a/authorization-server/src/main/resources/static/css/login.css
+++ b/authorization-server/src/main/resources/static/css/login.css
@@ -18,10 +18,6 @@ body {
     margin: auto;
 }
 
-.login-form .checkbox {
-    font-weight: 400;
-}
-
 .login-form .form-floating:focus-within {
     z-index: 2;
 }
